--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^6.2.9"
   },
   "devDependencies": {
+    "@types/express": "^4.17.3",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
