--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "MIT",
   "license": "ISC",
   "dependencies": {
-    "@types/express-session": "^1.18.1",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.0.0",
@@ -23,16 +22,22 @@
     "moment": "^2.30.1",
     "mongodb": "^3.2.6",
     "mongoose": "^6.2.9",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/connect-mongodb-session": "^2.4.7",
     "@types/express": "^4.17.3",
     "@types/morgan": "^1.9.9",
+    "@types/express-session": "^1.18.1",
+    "@types/multer": "^1.4.12",
+    "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
+    
   }
 }
