--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "author": "MIT",
   "license": "ISC",
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.8",
     "bcryptjs": "^2.4.3",
     "connect-mongodb-session": "^3.1.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.10",
     "express": "^4.17.3",
@@ -31,9 +31,11 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/connect-mongodb-session": "^2.4.7",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^4.17.3",
     "@types/express-session": "^1.18.1",
     "@types/morgan": "^1.9.9",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "@types/uuid": "^10.0.0",
     "nodemon": "^3.1.9",
